# epanns

./: .gitignore  README.md  demo_tag.py  predict.py  pyproject.toml  requirements.txt
.github/workflows/: build_wheels.yml
lib/: inference.py  models.py  utils.py
sed_demo/: models.py
src/epanns/: __main__.py  cli.py  predict.py
src/epanns/lib/: inference.py
